--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,9 @@
 {
     "compilerOptions": {
       "baseUrl": "src",
+      "module": "commonjs",
       "target": "es6"
     },
-    "include": ["src"]
+    "include": ["src"],
+    "exclude": ["node_modules"]
 }
