--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
 	"name": "component-library",
-	"version": "0.1.0",
+	"version": "0.2.0",
 	"private": true,
 	"engines": {
 		"npm": "please-use-yarn",
-		"yarn": ">= 1.19.1"
+		"yarn": ">= 1.19.1",
+		"node": ">= 14"
 	},
 	"dependencies": {
 		"@heroicons/react": "^2.0.13",
-		"easy-tailwind": "^1.1.0",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
