--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
-        "tailwind-merge": "^1.8.0"
+        "tailwind-merge": "^1.8.0",
+        "wouter": "^2.10.0"
     },
     "devDependencies": {
         "@storybook/addon-actions": "^6.5.16",
