--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "prettier": "^2.7.1",
         "prettier-plugin-tailwindcss": "^0.1.13",
         "tailwindcss": "^3.1.8",
+        "@babel/runtime": "7.13.8",
+        "typescript": "4.1.3",
         "webpack": "^5.75.0"
     },
     "scripts": {
